--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  	<main>
  		<div class="tablo">
  			<p class="bemutatkozas">Máttyus Sebestyén vagyok, a Budapesti Műszaki és Gazdaságtudományi Egyetem gépészmérnöki karának hallgatója.</p>
-	 		<img src="CSS/kepek/tablokep.jpg" alt="kép"  >
+	 		<img src="css/kepek/tablokep.jpg" alt="kép"  >
 
 	 	</div>
 	 		
