--- a/tanulmanyok.html
+++ b/tanulmanyok.html
@@ -27,7 +27,7 @@
  	<main class="kep">
  		<div class="kep_tanulmanyok">
  			
-	 		<img src="CSS/kepek/piarkep.jpg" alt="kép"  class="float_balra">
+	 		<img src="css/kepek/piarkep.jpg" alt="kép"  class="float_balra">
 	 		<p>Budapesti Piarista Gimnázium</p>
 	 		
 
