--- a/tervezes.html
+++ b/tervezes.html
@@ -27,10 +27,10 @@
  	<main class="kep">
  		<div class="kep_tervek">
  			
-	 		<img class="tervek" src="CSS/kepek/kezdolap.jpg" alt="kép" >
-	 		<img class="tervek" src="CSS/kepek/tanulmanyok.jpg" alt="kép" >
-	 		<img class="tervek" src="CSS/kepek/erdeklodesi.jpg" alt="kép" >
-	 		<img class="tervek" src="CSS/kepek/tervezes.jpg" alt="kép" >
+	 		<img class="tervek" src="css/kepek/kezdolap.jpg" alt="kép" >
+	 		<img class="tervek" src="css/kepek/tanulmanyok.jpg" alt="kép" >
+	 		<img class="tervek" src="css/kepek/erdeklodesi.jpg" alt="kép" >
+	 		<img class="tervek" src="css/kepek/tervezes.jpg" alt="kép" >
 	 		
 
 	 	</div>
